// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-talon-one's updateCustomerProfilesAttributes destination action: all fields 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "testType": "zIuxxC8$",
      },
      "customerProfileId": "zIuxxC8$",
    },
  ],
  "mutualAttributes": Object {
    "testType": "zIuxxC8$",
  },
}
`;

exports[`Testing snapshot for actions-talon-one's updateCustomerProfilesAttributes destination action: required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "zIuxxC8$",
    },
  ],
}
`;
